--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+
+body {
+    height: 100vh;
+    background: -webkit-linear-gradient(top, #6F6D6C, #59566C);
+    background: -moz-linear-gradient(top, #6F6D6C, #59566C);
+    background: linear-gradient(to bottom, #6F6D6C, #59566C);
+}
+
 .input {
     width: 730px;
     height: 200px;
@@ -6,6 +14,11 @@
     margin-bottom: 40px;
     resize: none;
     font-size: 18px;
+    background-color: rgb(201, 199, 199);
+    outline: 1px solid rgb(135, 135, 135);
+    -webkit-box-shadow: 0px 0px 40px 31px rgba(90,87,108,0.82);
+    -moz-box-shadow: 0px 0px 40px 31px rgba(90,87,108,0.82);
+    box-shadow: 0px 0px 40px 31px rgba(90,87,108,0.82);
 }
 
 .key-overlay:last-child {
@@ -13,12 +26,18 @@
 }
 
 .keyboard-wrapper {
-    width: 730px;
-    height: 232px;
+    justify-content: center;
+    align-items: center;
+    width: 750px;
+    height: 240px;
     margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
     background-color: silver;
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0px 0px 40px -1px rgba(90,87,108,0.82);
+    -moz-box-shadow: inset 0px 0px 40px -1px rgba(90,87,108,0.82);
+    box-shadow: inset 0px 0px 40px -1px rgba(90,87,108,0.82);
 }
 
 .keyWrapper {
@@ -37,13 +56,19 @@
     height: 40px;
     border: 1px solid black;
     margin: 2px;
-    border-radius: 2px;
-    font-style: bold;
+    border-radius: 4px;
     color: black;
+    background-color: rgb(211, 211, 211);
+    font: 15px "Fira Sans", sans-serif;
+    box-shadow: 0 5px 3px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
+
+.keyWrapper .shift {
+    width: 100px;
 }
 
 .keyWrapper .rshift {
-    width: 128px
+    width: 80px;
 }
 
 .key-large {
@@ -59,9 +84,10 @@
 }
 
 .active {
-    background: yellow;
-    border-radius: 20px;
+    background: rgb(137, 132, 132);
+    border-radius: 10px;
     transition: ease .1s;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.25), 0 1px 3px rgba(0,0,0,0.22);
 }
 
 .upper {
@@ -69,5 +95,5 @@
 }
 
 .key:hover {
-    background-color: thistle;
+    background-color: rgb(107, 102, 102);
 }
